# AthmosTechnicalTest

./: .gitignore  README.md  athmos.code-workspace
EcosystemOfServices/: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
EcosystemOfServices/.devcontainer/: devcontainer.json
EcosystemOfServices/Libraries/: CMakeLists.txt
EcosystemOfServices/Libraries/Entities/: CMakeLists.txt  Investor.hpp  User.hpp
EcosystemOfServices/Libraries/Helpers/: CMakeLists.txt  Concepts.hpp  Convert.hpp
EcosystemOfServices/Libraries/MemoryDatabase/: CMakeLists.txt  MemoryJson.hpp
EcosystemOfServices/Libraries/MemoryJsonDatabase/: CMakeLists.txt  MemDbJson.hpp
EcosystemOfServices/Services/: CMakeLists.txt
EcosystemOfServices/Services/AuthenticationService/: CMakeLists.txt
EcosystemOfServices/Services/CreateInvestorService/: CMakeLists.txt
EcosystemOfServices/Services/DeleteInvestorService/: CMakeLists.txt  Main.cpp
EcosystemOfServices/Services/ListInvertersService/: CMakeLists.txt  Main.cpp
EcosystemOfServices/Services/ModifyInvestorService/: CMakeLists.txt  Main.cpp
EcosystemOfServices/Tests/: CMakeLists.txt
EcosystemOfServices/Tests/Libraries/: CMakeLists.txt
EcosystemOfServices/Tests/Libraries/Entities/: CMakeLists.txt  Main.cpp
EcosystemOfServices/Tests/Libraries/Helpers/: CMakeLists.txt  ConvertToJson.hpp  ConvertToObject.hpp  Main.cpp
EcosystemOfServices/Tests/Libraries/MemoryDatabase/: CMakeLists.txt  Main.cpp
EcosystemOfServices/Tests/Libraries/Repositories/: CMakeLists.txt
EcosystemOfServices/Tests/Services/: CMakeLists.txt
Heritage/: README.md
Heritage/.devcontainer/: Dockerfile
MathHomework/: README.md
MathHomework/.devcontainer/: Dockerfile
TooManyTasksNotEnoughSpeed/: README.md
TooManyTasksNotEnoughSpeed/.devcontainer/: Dockerfile
Welcome/: README.md
Welcome/.devcontainer/: devcontainer.json
